cloudFormation/sg-all.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description" : "Security Groups",
  "Parameters": {
    "environment": {
      "Type" : "String",
      "Default": "null",
      "Description": "The environment tag"
    },
    "vpcId": {
      "Type" : "String",
      "Default": "null",
      "Description": "The VPC to put it in"
    }
  },
  "Resources": {

    "sgsshScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-ssh-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg2375Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 2375 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "2375",
            "ToPort": "2375",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-2375-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8500Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8500 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8500",
            "ToPort": "8500",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8500-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8080Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8080 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8080-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8080ScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8080 from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8080-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg80ScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 80 from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-80-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    }

  }
}
