cloudFormation/srm-all.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description" : "Bristech SRM stack-in-a-box",
  "Parameters": {
    "environment": {
      "Type" : "String",
      "Default": "null",
      "Description": "The environment tag"
    },
    "vpcId": {
      "Type" : "String",
      "Default": "null",
      "Description": "The VPC to put it in"
    },
    "subnet": {
      "Type" : "String",
      "Default": "null",
      "Description": "The subnet to put it in"
    },
    "authEIP": {
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "15",
      "Default": "null",
      "Description": "Auth Elastic IP"
    },
    "apiEIP": {
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "15",
      "Default": "null",
      "Description": "ApiGateway Elastic IP"
    },
    "frontendEIP": {
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "15",
      "Default": "null",
      "Description": "Frontend Elastic IP"
    }
  },

  "Resources": {
    "sgsshScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-ssh-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg2375Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 2375 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "2375",
            "ToPort": "2375",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-2375-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8500Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8500 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8500",
            "ToPort": "8500",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8500-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8080Subnet": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8080 from subnet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "10.0.1.0/24"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8080-subnet"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg8080ScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 8080 from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-8080-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "sg80ScottLogic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow 80 from ScottLogic Bristol",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "90.155.100.125/32"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg-80-ScottLogic"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "VpcId": { "Ref":"vpcId" }
      }
    },

    "consul" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Consul host",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "pna-consul",
        "Tags": [
          {
            "Key": "Name",
            "Value": "consul"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" }, { "Ref" : "sg8500Subnet" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },

    "swarmMaster" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Swarm Master host",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "swarm-master",
        "Tags": [
          {
            "Key": "Name",
            "Value": "swarm-master"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },

    "comms" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Comms service",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "comms",
        "Tags": [
          {
            "Key": "Name",
            "Value": "comms"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" },  { "Ref" : "sg8080Subnet" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },

    "sessions" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Sessions service",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "sessions",
        "Tags": [
          {
            "Key": "Name",
            "Value": "sessions"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" },  { "Ref" : "sg8080Subnet" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },

    "auth" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Auth service",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "auth",
        "Tags": [
          {
            "Key": "Name",
            "Value": "auth"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" },  { "Ref" : "sg8080Subnet" }, { "Ref" : "sg8080ScottLogic" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },
    "authEIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "EIP": { "Ref": "authEIP" },
        "InstanceId": { "Ref": "auth" }
      }
    },

    "apiGateway" : {
      "Type": "AWS::EC2::Instance",
      "Description": "ApiGateway service",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "api-gateway",
        "Tags": [
          {
            "Key": "Name",
            "Value": "api-gateway"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" }, { "Ref" : "sg8080ScottLogic" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },
    "apiEIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "EIP": { "Ref": "apiEIP" },
        "InstanceId": { "Ref": "apiGateway" }
      }
    },

    "frontend" : {
      "Type": "AWS::EC2::Instance",
      "Description": "Frontend host",
      "Properties": {
        "ImageId": "ami-f95ef58a",
        "InstanceType": "t2.micro",
        "KeyName": "frontend",
        "Tags": [
          {
            "Key": "Name",
            "Value": "frontend"
          },
          {
            "Key": "Environment",
            "Value": { "Ref": "environment" }
          }
        ],
        "NetworkInterfaces" : [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "GroupSet": [ { "Ref" : "sgsshScottLogic" }, { "Ref" : "sg2375Subnet" }, { "Ref" : "sg80ScottLogic" } ],
            "SubnetId": { "Ref" : "subnet" }
          }
        ]
      }
    },
    "frontendEIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "EIP": { "Ref": "frontendEIP" },
        "InstanceId": { "Ref": "frontend" }
      }
    }

  }
}
